--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.48.9"
+    "@raycast/api": "^1.48.9",
+    "axios": "1.3.4"
   },
   "devDependencies": {
     "@raycast/eslint-config": "1.0.5",
