--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.48.9",
+    "@raycast/utils": "1.5.2",
     "axios": "1.3.4"
   },
   "devDependencies": {
