--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "@types/react": "18.0.9",
     "eslint": "^7.32.0",
     "prettier": "^2.5.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vitest": "0.29.7"
   },
   "scripts": {
     "build": "ray build -e dist",
+    "test": "vitest",
     "dev": "ray develop",
     "fix-lint": "ray lint --fix",
     "lint": "ray lint",
