--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@raycast/api": "^1.48.9",
     "@raycast/utils": "1.5.2",
     "axios": "1.3.4",
+    "fuse.js": "6.6.2",
     "moment": "2.29.4"
   },
   "devDependencies": {
